# Tessera-Renderer

./: .clang-format  CMakeLists.txt  compile_commands.json
.cache/clangd/index/: _fixes.hpp.482A06CF7A970129.idx  _vectorize.hpp.61807C0BB86939C0.idx  aabb2d.c.CF83D8CCA2AA4980.idx  aabb2d.h.AA4155153254F211.idx  aabb2d.h.E07AB1F976D8CC6C.idx  affine-mat.h.2ED7CF413D846EC3.idx  affine-post.h.67B92E1B1907BF0D.idx  affine-pre.h.A8771B0E0C99F77D.idx  affine.c.CC31401ED914F1AE.idx  affine.h.2BB06F8B007768D8.idx  affine.h.915012EEBCB878B9.idx  affine.h.C7DA8410E15818CC.idx  affine2d.c.F11DB63BE6E28BBD.idx  affine2d.h.9398BB2253071DF9.idx  affine2d.h.9B819CAAE78D0919.idx  bezier.c.0ECD5CD817FC0770.idx  bezier.h.6FE98E89C5F8C06E.idx  bezier.h.BB0CE28B0BEB96F6.idx  box.c.25C008796FC4BE03.idx  box.h.0CDC651B724C2B34.idx  box.h.A9788B10C73E5D7D.idx  call.h.B2976CF7A39E0FF9.idx  cam.c.B8277255F1040885.idx  cam.h.ADAD61A1AD0D2106.idx  cam.h.C57E1FA074C5C156.idx  cglm.h.CA09C2126301BF9E.idx  color.h.06A270D801434A93.idx  common.h.5CF8C5149AD9B944.idx  common.h.756DDABC2A6FB3CC.idx  common.hpp.39EABB8058EB38E0.idx  compute_common.hpp.6A213774CD80A9DE.idx  compute_vector_decl.hpp.85A7828DF7CBDEC5.idx  compute_vector_relational.hpp.1A2A54C795E11E62.idx  constants.hpp.8C3702BA37A72F87.idx  constants.inl.0CD0B47084A9832E.idx  curve.c.5F08594938B8E4A7.idx  curve.h.09B45DE50323EFDB.idx  curve.h.6F578EF1D665EACF.idx  dual_quaternion.hpp.BDEC3ADD63612381.idx  dual_quaternion.inl.D6F41FFD3A2DA73B.idx  (+350 more)
src/: main.cpp  rglLoad.h
